[gd_scene load_steps=2 format=3 uid="uid://dxvw0y9qkqxr"]

[ext_resource type="Script" path="res://systems/PerformanceTest.gd" id="1_0k8w4"]

[node name="PerformanceTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0k8w4")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "Performance Test"
theme_type_variation = &"HeaderLarge"

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="FPSLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "FPS: 60.0 (16.67ms)"

[node name="MemoryLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Memory: 0.0 MB"

[node name="ObjectsLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Spawned Objects: 0"

[node name="HSeparator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="SpawnButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Spawn Test Objects"

[node name="ClearButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Clear Objects"

[node name="AtlasTestButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Test Sprite Atlas"

[node name="InfoLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 200.0
text = "Performance Optimizations:

• Object Pooling: Reuses objects
• Signal-Based Events: No polling
• Sprite Atlases: Batched rendering
• 1280x720 Canvas Items: Optimal scaling

Test different scenarios to verify
performance improvements."
vertical_alignment = 1